snapshot-tests/tests/snapshots/parser__bad_floats__trailing_exp.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-float]: 
  ┌─ trailing_exp:1:5
  │
1 │ a = 0.e
  │     ^ invalid float: nothing after decimal point
